i18n fix: vi - license_footer

--- a/extension-manifest-v2/_locales/vi/messages.json
+++ b/extension-manifest-v2/_locales/vi/messages.json
@@ -182,7 +182,7 @@
     "message": "Trang web không còn bị hạn chế."
   },
   "license_footer": {
-    "message": "Ghostery $COPY$ là một công ty của Cliqz. Tìm hiểu thêm về $LINK_START$ Cliqz $LINK_END$. $COPY$ Cliqz International GmbH, một công ty con thuộc sở hữu hoàn toàn của Cliqz GmbH. Đã đăng ký Bản quyền."
+    "message": "Ghostery GmbH. là một công ty của Cliqz. Đã đăng ký Bản quyền."
   },
   "account_creation_privacy_statement": {
     "placeholders": {
